@@ -54,7 +54,7 @@ objects are created with the <a href=#Joystick>pygame.joystick.Joystick()</a> fu
 This function needs a joystick device number to work on. All
 joystick devices on the system are enumerated for use as a Joystick
 object. To access most of the Joystick functions, you'll need to
-<a href=pygame_cdrom.html#init>init()</a> the Joystick. (note that the joystick module will already
+<a href=pygame.html#init>init()</a> the Joystick. (note that the joystick module will already
 be initialized). When multiple Joysticks objects are created for the
 same joystick device, the state and values for those Joystick objects
 will be shared.
